TD/td_5/IN301_TD5_TRI_INT/0.txt
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ gcc -Wall -c tabint.c
tabint.c: In function ‘gen_alea_tabint’:
tabint.c:15:20: error: ‘k’ undeclared (first use in this function)
   A.T[i] = rand()%(k+1);
                    ^
tabint.c:15:20: note: each undeclared identifier is reported only once for each function it appears in
tabint.c: In function ‘aff_tabint’:
tabint.c:25:36: error: ‘A’ undeclared (first use in this function)
  printf("Tableau de taille %d: \n",A.N);
                                    ^
tabint.c: In function ‘sup_tabint’:
tabint.c:22:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ make
gcc -Wall -c tri_bulle.c
gcc -Wall -c tabint.c
tabint.c: In function ‘gen_alea_tabint’:
tabint.c:15:20: error: ‘k’ undeclared (first use in this function)
   A.T[i] = rand()%(k+1);
                    ^
tabint.c:15:20: note: each undeclared identifier is reported only once for each function it appears in
tabint.c: In function ‘aff_tabint’:
tabint.c:25:36: error: ‘A’ undeclared (first use in this function)
  printf("Tableau de taille %d: \n",A.N);
                                    ^
tabint.c: In function ‘sup_tabint’:
tabint.c:22:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Makefile:23 : la recette pour la cible « tabint.o » a échouée
make: *** [tabint.o] Erreur 1
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ make
gcc -Wall -c tabint.c
tabint.c: In function ‘gen_alea_tabint’:
tabint.c:15:20: error: ‘k’ undeclared (first use in this function)
   A.T[i] = rand()%(k+1);
                    ^
tabint.c:15:20: note: each undeclared identifier is reported only once for each function it appears in
tabint.c: In function ‘aff_tabint’:
tabint.c:25:36: error: ‘A’ undeclared (first use in this function)
  printf("Tableau de taille %d: \n",A.N);
                                    ^
tabint.c: In function ‘sup_tabint’:
tabint.c:22:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Makefile:23 : la recette pour la cible « tabint.o » a échouée
make: *** [tabint.o] Erreur 1
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ make
gcc -Wall -c tabint.c
tabint.c: In function ‘aff_tabint’:
tabint.c:26:22: error: ‘TABINT {aka struct tabint}’ has no member named ‘n’
  for(int i = 0; i < A.n; i++)
                      ^
tabint.c: In function ‘sup_tabint’:
tabint.c:22:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Makefile:23 : la recette pour la cible « tabint.o » a échouée
make: *** [tabint.o] Erreur 1
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ make
gcc -Wall -c tabint.c
tabint.c: In function ‘aff_tabint’:
tabint.c:25:8: error: ‘N’ undeclared (first use in this function)
  A.N = N;
        ^
tabint.c:25:8: note: each undeclared identifier is reported only once for each function it appears in
tabint.c:28:22: error: ‘TABINT {aka struct tabint}’ has no member named ‘n’
  for(int i = 0; i < A.n; i++)
                      ^
tabint.c: In function ‘sup_tabint’:
tabint.c:22:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Makefile:23 : la recette pour la cible « tabint.o » a échouée
make: *** [tabint.o] Erreur 1
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ make
gcc -Wall -c tabint.c
tabint.c: In function ‘sup_tabint’:
tabint.c:22:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
gcc -Wall -o tri_bulle tri_bulle.o tabint.o
./tri_bulle
gnuplot stat.gplt
evince stat.pdf &
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ 
(evince:9489): Gtk-WARNING **: Allocating size to EvSidebar 0x560c5d2f56e0 without calling gtk_widget_get_preferred_width/height(). How does the code know the size to allocate?
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ make
gcc -Wall -c tri_bulle.c
gcc -Wall -c tabint.c
tabint.c:20:8: error: conflicting types for ‘sup_tabint’
 TABINT sup_tabint (TABINT A) {
        ^~~~~~~~~~
In file included from tabint.c:1:0:
tabint.h:13:6: note: previous declaration of ‘sup_tabint’ was here
 void sup_tabint (TABINT T);
      ^~~~~~~~~~
tabint.c: In function ‘sup_tabint’:
tabint.c:22:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Makefile:23 : la recette pour la cible « tabint.o » a échouée
make: *** [tabint.o] Erreur 1
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ make
gcc -Wall -c tabint.c
gcc -Wall -o tri_bulle tri_bulle.o tabint.o
./tri_bulle
gnuplot stat.gplt
evince stat.pdf &
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ 
(evince:9920): GLib-GObject-WARNING **: invalid uninstantiatable type '-g-type-private--IFaceHolder' in cast to 'EvMediaPlayerKeys'

user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ git add --all
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ git commit -a
[master fbd37d7] 07-10-2019
 Committer: Utilisateur <user@debian.arcahe.ovh>
Votre nom et votre adresse courriel ont été configurés automatiquement en se
fondant sur votre nom d'utilisateur et le nom de votre machine. Veuillez 
vérifier qu'ils sont corrects. Vous pouvez supprimer ce message en les 
paramétrant explicitement. Lancez les commandes suivantes et suivez les
instruction dans votre éditeur pour éditer votre fichier de configuration :

    git config --global --edit

Après ceci, vous pouvez corriger l'identité utilisée pour cette validation avec :

    git commit --amend --reset-author

 19 files changed, 193 insertions(+)
 create mode 100755 TD/td_5/IN301_TD5_TRI_INT.zip
 create mode 100755 TD/td_5/IN301_TD5_TRI_INT/Makefile
 create mode 100755 TD/td_5/IN301_TD5_TRI_INT/stat.gplt
 create mode 100755 TD/td_5/IN301_TD5_TRI_INT/stat.h
 create mode 100644 TD/td_5/IN301_TD5_TRI_INT/stat.pdf
 create mode 100755 TD/td_5/IN301_TD5_TRI_INT/tabint.c
 create mode 100755 TD/td_5/IN301_TD5_TRI_INT/tabint.h
 create mode 100644 TD/td_5/IN301_TD5_TRI_INT/tabint.o
 create mode 100644 TD/td_5/IN301_TD5_TRI_INT/test_tri_bulle.data
 create mode 100755 TD/td_5/IN301_TD5_TRI_INT/tri_bulle
 create mode 100755 TD/td_5/IN301_TD5_TRI_INT/tri_bulle.c
 create mode 100644 TD/td_5/IN301_TD5_TRI_INT/tri_bulle.o
 create mode 100644 TD/td_5/__MACOSX/._IN301_TD5_TRI_INT
 create mode 100644 TD/td_5/__MACOSX/IN301_TD5_TRI_INT/._Makefile
 create mode 100644 TD/td_5/__MACOSX/IN301_TD5_TRI_INT/._stat.gplt
 create mode 100644 TD/td_5/__MACOSX/IN301_TD5_TRI_INT/._stat.h
 create mode 100644 TD/td_5/__MACOSX/IN301_TD5_TRI_INT/._tabint.c
 create mode 100644 TD/td_5/__MACOSX/IN301_TD5_TRI_INT/._tabint.h
 create mode 100644 TD/td_5/__MACOSX/IN301_TD5_TRI_INT/._tri_bulle.c
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ git push
fatal: unable to access 'https://github.com/YassamineChabihi/IN301/': Could not resolve host: github.com
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ git add --all
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ git commit -a
Sur la branche master
Votre branche est en avance sur 'origin/master' de 1 commit.
  (utilisez "git push" pour publier vos commits locaux)

rien à valider, la copie de travail est propre
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ git push
fatal: unable to access 'https://github.com/YassamineChabihi/IN301/': Could not resolve host: github.com
user@debian:~/IN301/TD/td_5/IN301_TD5_TRI_INT$ 
